ray/networking/enforce-authorizationpolicy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-authorizationpolicy
  annotations:
    policies.kyverno.io/title: Enforce Istio Authentication
    policies.kyverno.io/category: Istio
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.11.0
    policies.kyverno.io/subject: AuthorizationPolicy
    policies.kyverno.io/description: >-
      Enforces the creation of Istio AuthorizationPolicy resources for Ray services and ensures that mTLS is enabled in DestinationRule resources.
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: enforce-authorizationpolicy
    match:
      any:
      - resources:
          kinds:
          - AuthorizationPolicy
    validate:
      message: "AuthorizationPolicies are required for Ray services."
      pattern:
        spec:
          rules:
          - to:
            - operation:
                methods: ["GET", "POST"]
